# machine_student

./: README.md  pyproject.toml  setup.py
machine_student/feature_pipeline/enrich/: curation.py  encoders.py  imputers.py
machine_student/feature_pipeline/feature_selection/: decomposition.py
machine_student/feature_pipeline/raw/: retrieval.py  splitting.py
machine_student/feature_pipeline/resamples/: rebalancers.py
machine_student/training_pipeline/algorithms/: base.py  classification.py  clustering.py  regression.py
tests/data/: test_retrieval.py
