[tool.poetry]
name = "machine-student"
version = "0.1.0"
description = "Package for easy Machine Learning models prototyping."
authors = ["scottini21 <39658899+basti210998@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.9,<3.12"
zenml = "^0.62.0"
mlflow = "^2.14.3"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
pyspark = "^3.5.1"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
xgboost = "^2.1.0"
catboost = "^1.2.5"
lightgbm = "^4.4.0"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
